<resources>
    <string name="app_name">ChatHub</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="colse">close</string>
    <string name="friend_id_envelope">keyPass</string>
    <string name="friend_username_envelope">keyuser</string>
    <string name="checking_internet_msg">Check Internet connection</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_projectId">ca-app-pub-1046628266446479~5914992735</string>
    <string name="picsFolderFirebase">usersProfilePic/</string>
    <string name="jpgExt">.jpg</string>
    <string name="app_logo">App logo</string>
    <string name="prfile_pic">profile picture</string>
    <string name="user_name">username</string>
    <string name="email_desc">email</string>
    <string name="send_msg_desc">send message</string>
    <string name="add_desc">add</string>
    <string name="profile">Profile</string>
    <string name="favourite_friends">Favourite Friends</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="add_to_favourite_list">Add to favourite list</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="add_to_widget">Add to widget</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="messagetobesent">message to be sent</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log in</string>
    <string name="new_user_register_here">new user register here</string>
    <string name="enter_username">Enter username</string>
    <string name="regitser">Regitser</string>
    <string name="already_user_log_in_here">Already user log in here</string>
    <string name="userpic">user picture</string>
    <string name="search">Search</string>
    <string name="usrename_pref">UserName</string>
    <string name="profile_title">Profile</string>
    <string name="upload_meg">Upload</string>
    <string name="add_user_title">Add user</string>
    <string name="userwidget_pref">userWidget</string>
    <string name="loginbtn">log in button</string>
    <string name="new_user">new user register here</string>
    <string name="signuptn">sign up button</string>
    <string name="already_user">already user log in here</string>
    <string name="ad_basnner">ad banner</string>
    <string name="app_bar">app bar</string>
    <string name="fvav_list_msg">User has been added to favourite list</string>
</resources>
